# rapl-energy

./: Cargo.toml  Makefile  README.md  build.rs  rapl_energy.h
.github/workflows/: build.yml  release.yml
examples/: amd.rs  idle.rs  ina.rs  intel.rs  msr.rs  nvml.rs  power.rs  rapl.c  rapl.rs
rapl-energy/: Cargo.toml
rapl-energy-c/: Cargo.toml  Makefile  libc.rs  rapl_energy.h  rapl_energy_c.h
rapl-energy-c/examples/: amd.c  intel.c  msr.c  rapl.c
rapl-energy/examples/: amd.rs  ina.rs  intel.rs  msr.rs  msr_power.rs  rapl.rs  rapl_power.rs
rapl-energy/src/: lib.rs  msr.rs  rapl.rs  rapl_amd.rs
src/: constraint.rs  energy_duration.rs  file_handle.rs  http.rs  hwmon.rs  lib.rs  libc.rs  msr.rs  nvml.rs  probes.rs  rapl.rs  rapl_amd.rs  rapl_intel.rs  rapl_mock.rs  statistics.rs  url.rs
src/probes/: http.rs  hwmon.rs  msr.rs  msr_amd.rs  nvml.rs  rapl.rs
tests/: rapl_mock.rs
