[package]
name = "rapl-energy"
version = "0.1.21"
edition = "2024"
categories = ["development-tools::profiling"]
keywords = ["benchmarking", "energy", "sustainability"]
description = "Small library for getting the CPU energy consumption from RAPL"
repository = "https://github.com/JordyAaldering/rapl-energy"
license = "GPL-3.0"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["http", "hwmon", "nvml"]
http = ["dep:ureq"]
hwmon = ["dep:libmedium"]
nvml = ["dep:nvml-wrapper"]

[dependencies]
indexmap = "2.8.0"
libmedium = { version = "0.12.0", optional = true }
nvml-wrapper = { version = "0.10.0", optional = true }
once_cell = "1.21.3"
ureq = { version = "3.0.10", optional = true }

[build-dependencies]
cbindgen = "0.28.0"
