[package]
name = "rapl-energy"
version = "0.1.24"
edition = "2024"
categories = ["development-tools::profiling"]
keywords = ["benchmarking", "energy", "sustainability"]
description = "Small library for getting the CPU energy consumption from RAPL"
repository = "https://github.com/JordyAaldering/rapl-energy"
license = "GPL-3.0"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
indexmap = "2.10.0"

[build-dependencies]
cbindgen = "0.29.0"
