[package]
name = "rapl-energy"
version = "0.1.7"
edition = "2021"
categories = ["development-tools::profiling"]
keywords = ["benchmarking", "energy", "sustainability"]
description = "Small library for getting the CPU energy consumption from RAPL"
repository = "https://github.com/JordyAaldering/rapl-energy"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
erased-serde = "0.4.5"
serde = { version = "1.0.203", features = ["serde_derive"] }

[dev-dependencies]
serde_json = "1.0.120"
