[package]
name = "rapl-energy"
version = "0.1.7"
edition = "2021"
categories = ["development-tools::profiling"]
keywords = ["benchmarking", "energy", "sustainability"]
description = "Small library for getting the CPU energy consumption from RAPL"
repository = "https://github.com/JordyAaldering/rapl-energy"
license = "Apache-2.0"
readme = "../README.md"

[features]
default = ["url"]
url = ["dep:ureq"]


[dependencies]
erased-serde = "0.4.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
ureq = { "2.10.0", optional = true }

[dev-dependencies]
serde_json = "1.0.120"
